Opus fixed ugly levels by Gemini and grid visible

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <div id="game-area">
             <canvas id="game-canvas"></canvas>
-            <div id="ui-overlay" class="hidden">
+            <div id="ui-overlay">
                 <h2 id="overlay-message">WORKERS WORKING!</h2>
                 <button id="next-level-btn">NEXT SEQUENCE</button>
             </div>
